--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,5 @@
 /*===== GOOGLE FONTS =====*/
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap");
 /*===== VARIABLES CSS =====*/
 :root {
   --header-height: 3rem;
@@ -14,7 +14,7 @@
 
 /*===== Fuente y tipografia =====*/
 :root {
-  --body-font: 'Poppins', sans-serif;
+  --body-font: "Poppins", sans-serif;
   --big-font-size: 2rem;
   --h2-font-size: 1.25rem;
   --normal-font-size: 0.938rem;
@@ -90,7 +90,7 @@ img {
 }
 .section-title::after {
   position: absolute;
-  content: '';
+  content: "";
   width: 64px;
   height: 0.18rem;
   left: 0;
@@ -156,7 +156,7 @@ img {
 }
 .nav__link:hover::after {
   position: absolute;
-  content: '';
+  content: "";
   width: 100%;
   height: 0.18rem;
   left: 0;
@@ -175,7 +175,7 @@ img {
 /*Active menu*/
 .active::after {
   position: absolute;
-  content: '';
+  content: "";
   width: 100%;
   height: 0.18rem;
   left: 0;
@@ -302,10 +302,19 @@ img {
   width: 85%;
 }
 .skills__js {
-  width: 70%;
+  width: 82%;
 }
 .skills__react {
+  width: 70%;
+}
+.skills__node {
   width: 65%;
+}
+.skills__mongodb {
+  width: 65%;
+}
+.skills__android {
+  width: 70%;
 }
 .skills__img {
   border-radius: 0.5rem;
